fix: font family and alignment in post details

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,7 +15,7 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-    font-family: $base-font-family;
+    font-family: $font-family-base;
     font-size: $base-font-size;
     line-height: $base-line-height;
     font-weight: 300;
